# Iris

./: .clang-format  .editorconfig  .editorconfig.ktlint  .gitignore  .gitmodules  ANDROID_SIMULATOR_TESTING_GUIDE.md  BRANCH_STRATEGY_COMPARISON.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Design and Implementation Plan for an On‑Device AI Assistant (Android).txt  IMPLEMENTATION_EDIT_RESEND_RETRY.md  IMPLEMENTATION_SUMMARY_ISSUE_04.md  IRIS_ANDROID_SETUP_COMPLETE_GUIDE.md  MESSAGE_PERSISTENCE_IMPLEMENTATION.md  MODEL_PARAMETERS_ARCHITECTURE.md  MODEL_PARAMETERS_IMPLEMENTATION.md  MODEL_PARAMETERS_REVIEW.md  MODEL_PARAMETERS_UI_SPEC.md  MULTIMODAL_IMPLEMENTATION_SUMMARY.md  MVP_CODEBASE_ANALYSIS.md  MVP_DEPLOYMENT_GUIDE.md  MVP_SLICE_1_ARCHITECTURE.md  MVP_SLICE_1_README.md  MVP_SLICE_1_UI_MOCKUP.md  MVP_SLICE_1_VISUAL_SPEC.md  PROJECT_SETUP_RECAP.md  RELEASE_SIGNING_GUIDE.md  SECURITY.md  SETTINGS_MVP11_IMPLEMENTATION.md  SLICE_12_IMPLEMENTATION_SUMMARY.md  STREAMING_TYPING_INDICATOR_IMPLEMENTATION.md  android.md  build.gradle.kts  detekt.yml  gradle.properties  local.properties.template  read.md  read1.md  read2.md  (+5 more)
.github/: BADGES.md  builder-prompt-agent.md  copilot-instructions-backup.md  copilot-instructions.md  planner-prompt.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_mvp.yml  bug_report.yml  config.yml  feature_request.yml  security.yml  technical_debt.yml
.github/workflows/: build-and-test.yml  ci-android.yml  coding-agent.yml  dependency-updates.yml  enhanced-ci.yml  multi-api-testing.yml  release.yml  stale.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/nervesparks/iris/data/: UserPreferencesRepositoryTest.kt
app/src/androidTest/java/com/nervesparks/iris/ui/: ChatStateTransitionTest.kt  ConversationListScreenTest.kt  SettingsParametersTest.kt  SettingsSelectorTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/nervesparks/iris/: ChatScreen.kt  Downloadable.kt  MainActivity.kt  MainViewModel.kt
app/src/main/java/com/nervesparks/iris/app/: IrisApplication.kt
app/src/main/java/com/nervesparks/iris/data/: Conversation.kt  Message.kt  UserPreferencesRespository.kt
app/src/main/java/com/nervesparks/iris/mock/: MockLLamaAndroid.kt
app/src/main/java/com/nervesparks/iris/ui/: AboutScreen.kt  BenchMarkScreen.kt  ConversationListScreen.kt  DataManagementScreen.kt  MainChatScreen.kt  ModelsScreen.kt  ParametersScreen.kt  SearchResultScreen.kt  SettingsScreen.kt
app/src/main/java/com/nervesparks/iris/util/: PrivacyGuard.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-v31/: themes.xml
app/src/test/java/com/example/android/: ExampleUnitTest.kt
app/src/test/java/com/nervesparks/iris/: ChatScreenTest.kt  DownloadableTest.kt  MainViewModelEditRetryTest.kt  MainViewModelModelSwitchTest.kt  MainViewModelParametersTest.kt  MainViewModelQueueTest.kt
app/src/test/java/com/nervesparks/iris/data/: MessageTest.kt  UserPreferencesRepositoryTest.kt
common/: build.gradle.kts
core-hw/: build.gradle.kts
core-llm/: CHAT_ENGINE.md  build.gradle.kts
core-llm/src/main/cpp/: CMakeLists.txt  generation_engine.cpp  generation_engine.h  jni_bridge.cpp  model_manager.cpp  model_manager.h
core-models/: README.md  build.gradle.kts
core-models/src/main/assets/: models.json
core-multimodal/: README.md  build.gradle.kts  proguard-rules.pro
core-multimodal/src/main/assets/: multimodal_models.json
core-multimodal/src/main/cpp/: CMakeLists.txt  README.md  jni_utils.h
core-rag/: build.gradle.kts
core-safety/: build.gradle.kts
core-tools/: README.md  build.gradle.kts
docs/: COMPREHENSIVE_FUNCTIONALITY_SIMULATION_REPORT.md  COPILOT_AGENT_LIMITATIONS_ANALYSIS.md  CORE_ARCHITECTURE_IMPLEMENTATION.md  CORE_MODULE_INTERACTIONS.md  FOLLOW_UP_TASKS.md  INDEX.md  ISSUE_8_75_PHASE_1_SUMMARY.md  MOCK_IMPLEMENTATIONS_STATUS.md  NATIVE_INTEGRATION_ROADMAP.md  PHASE_1_COMPLETE_README.md  PLAN.md  PRODUCTION_ARCHITECTURE_ANALYSIS.md  PRODUCTION_GAPS_IMPLEMENTATION_PLAN.md  PRODUCTION_QUALITY_ISSUE_PROMPTS.md  PROJECT_FOUNDATION_SUMMARY.md  architecture.md  llama-cpp-integration-status.md  manual-implementation-guide-7.5.md  multimodal-implementation-guide.md  multimodal-integration-example.md  multimodal-integration-guide.md
docs/adr/: 0001-use-copilot-sonnet4.md  0002-github-actions-cicd.md  0002-native-multimodal-integration-strategy.md  _template.md
docs/issues/: 00-project-foundation.md  01-core-architecture.md  02-native-llama-integration.md  03-hardware-detection.md  04-model-management.md  05-chat-engine.md  06-rag-engine.md  07-multimodal-support.md  07.5-multimodal-production-implementation.md  08-voice-processing.md  09-monitoring-observability.md  10-safety-engine.md  11-memory-management.md  12-performance-optimization.md  13-cloud-integration.md  14-ui-ux-implementation.md  15-testing-strategy.md  16-deployment-release.md  2.5-production-readiness-consolidation.md  3.5-production-gaps-completion.md  8.5-voice-processing-production-consolidation.md  8.75-production-quality-consolidation.md  CORE_MVP_READINESS_ASSESSMENT_00-8.5.md  FINAL_PRODUCTION_READINESS_VERIFICATION_00-06.md  PRODUCTION_READINESS_DEEP_DIVE_00-7.5.md  PRODUCTION_READINESS_FINAL_ASSESSMENT.md  PRODUCTION_READINESS_FINAL_ASSESSMENT_00-8.5.md  PRODUCTION_READINESS_FINAL_VERIFICATION.md  PRODUCTION_READINESS_ISSUE_05_VERIFICATION.md
docs/pages/: chat-interface.md  data-privacy.md  inference-engine.md  model-management.md  settings-config.md  voice-processing.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
llama/: build.gradle.kts
llama/src/main/cpp/: CMakeLists.txt  llama-android.cpp
llama/src/main/java/android/llama/cpp/: LLamaAndroid.kt
llama/src/test/java/android/llama/cpp/: LLamaAndroidRateLimitThermalTest.kt
llama/src/test/resources/: .gitkeep
llama/src/testDebug/resources/: .gitkeep
model_pack/: build.gradle.kts
scripts/: pre-commit  setup-dev.sh  test-mvp-slice-1.sh
(+171 files in other folders)
